--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 before_install:
-  # Latest version of arduino-cli
-  - curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh -s
+  - sudo apt-get update
   # Cscope and ctags
-  - apt install cscope exuberant-ctags
+  - sudo apt install cscope exuberant-ctags
+  # Latest version of arduino-cli
+  - curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | BINDIR=/usr/local/bin sudo sh
+  # Install arduino-esp32 for testing
   - arduino-cli core install --additional-urls https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json esp32:esp32@1.0.6
 language: python
 python:
@@ -16,8 +18,8 @@ python:
   - "nightly" # nightly build
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
-  - ln -s ${PWD}/arduino-cscope-ctags /usr/local/bin/
+  - sudo pip install -r requirements.txt
+  - sudo ln -s ${PWD}/arduino-cscope-ctags /usr/local/bin/
 # command to run tests
 script:
   - pytest "test/"
