--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ python:
 # command to install dependencies
 install:
   - sudo pip install -r requirements.txt
+  - chmod +x arduino-cscope-ctags
   - sudo ln -s ${PWD}/arduino-cscope-ctags /usr/local/bin/
 # command to run tests
 script:
