--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ before_install:
   # Cscope and ctags
   - sudo apt install cscope exuberant-ctags
   # Latest version of arduino-cli
-  - curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | BINDIR=/usr/local/bin sudo sh
+  - curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | BINDIR=~/local/bin sh
   # Install arduino-esp32 for testing
-  - sudo arduino-cli core install --additional-urls https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json esp32:esp32@1.0.6
+  - arduino-cli core install --additional-urls https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json esp32:esp32@1.0.6
+env:
+  - PATH = /bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin:${HOME}/local/bin
 language: python
 python:
   - "3.4"
