--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,22 @@
+os:
+  - linux
+    dist: xenial # Ubuntu 16.04
+  - linux
+    dist: bionic # Ubuntu 18.04
+  - linux
+    dist: focal  # Ubuntu 20.04
+  #- osx
 before_install:
   - sudo apt-get update
   # Cscope and ctags
   - sudo apt install cscope exuberant-ctags
   # Latest version of arduino-cli
-  - mkdir ${HOME}/local/bin
+  - mkdir -p ${HOME}/local/bin
   - curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | BINDIR=${HOME}/local/bin sh
   # Install arduino-esp32 for testing
   - arduino-cli core install --additional-urls https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json esp32:esp32@1.0.6
 env:
-  - PATH="/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin:${HOME}/local/bin"
+  - PATH="${PATH}:${HOME}/local/bin"
 language: python
 python:
   - "3.4"
