--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ python:
   - "nightly" # nightly build
 # command to install dependencies
 install:
-  - sudo pip3 install -r requirements.txt
+  - pip install -r requirements.txt
   - chmod +x arduino-cscope-ctags
 # command to run tests
 script:
