Added OSX testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,8 @@
 os:
   - linux
-  #- osx
+  - osx
 before_install:
-  - sudo apt-get update
-  # Cscope and ctags
-  - sudo apt install cscope exuberant-ctags
-  # Latest version of arduino-cli
-  - mkdir -p ${HOME}/local/bin
-  - curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | BINDIR=${HOME}/local/bin sh
-  # Install arduino-esp32 for testing
-  - arduino-cli core install --additional-urls https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json esp32:esp32@1.0.6
+  - bash test/before_install.sh
 env:
   - PATH="${PATH}:${HOME}/local/bin"
 language: python
